kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/005_superoperations_parammismatch1_inv.kmt
/* $Id: 005_superoperations_parammismatch1_inv.kmt,v 1.2 2007-09-14 13:40:30 ftanguy Exp $ */

// Test of constraints on operations
// This test must make specific errors to appear. 

package root_package;
using kermeta::standard



class A
{
   operation m(x : Object) : String is do
		result := void
   end
}

class B inherits A
{
   method m(x : String) : String is do
		result := void
   end
}
